ubiquity (1.9.12) UNRELEASED; urgency=low

  [ Mario Limonciello ]
  * Mythbuntu frontend:
    - Correctly substitute language question on last page.
    - Check for proper widget when toggling mythweb. (LP: #264474)
    - Drop functionality to "use live environment mysql information".
      This is now done automatically if you've entered it previously.

  [ Colin Watson ]
  * Set OVERRIDE_LEAVE_CD_MOUNTED=1 to stop apt-setup (>= 1:0.37ubuntu4)
    from trying to unmount /cdrom in its cdrom generator.

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 04 Sep 2008 01:15:08 -0500

ubiquity (1.9.11) intrepid; urgency=low

  * Add a graphical partition bar to the advanced partitioning page.
  * Add before and after graphical partition bars to the autopartitioning
    page.
  * Do not copy files that we're going to later remove, per
    dvd-performance-hacks.
  * Automatic update of included source packages: console-setup
    1.25ubuntu3, partman-auto 78ubuntu2, partman-base 121ubuntu5,
    partman-basicfilesystems 60ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 02 Sep 2008 15:19:15 -0400

ubiquity (1.9.10) intrepid; urgency=low

  [ Harald Sitter ]
  * Ensure that the KDE frontend is using Oxygen icons

  [ Mario Limonciello ]
  * Mythbuntu Frontend:
    - Update debconf strings for summary template page.
    - Hide the mainline Ubiquity autologin option.
    - Hide the installer UI while MythTV setup is running.
    - Remove mythtv-status from Frontend installs.

  [ Colin Watson ]
  * GTK frontend:
    - Fix widget/method name clash that broke the Quit button (LP: #257962).
    - Hide auto-login option in OEM mode, since it will be offered later in
      a less confusing context (LP: #257606).
  * Automatic update of included source packages: base-installer
    1.86ubuntu4, partman-efi 17ubuntu2, partman-partitioning 59ubuntu4,
    partman-target 55ubuntu3, user-setup 1.20ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 22 Aug 2008 16:52:54 +0100
