@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Jul 27 14:15:12 2008 -->
+<!--Generated with glade3 3.4.5 on Thu Sep  4 17:29:56 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="dummy_window">
     <property name="visible">True</property>
@@ -98,11 +98,7 @@
                             <property name="visible">True</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                             <property name="active">1</property>
-                            <property name="items" translatable="yes">AMD Proprietary Driver (fglrx)
-NVIDIA Proprietary Driver (TNT2)  (nvidia_legacy)
-NVIDIA Proprietary Driver (Geforce2-4) (nvidia)
-NVIDIA Proprietary Driver (Geforce 5+) (nvidia_new)
-Hauppauge PVR-350 (ivtv)</property>
+                            <property name="items" translatable="yes"></property>
                             <signal name="changed" handler="video_changed"/>
                           </widget>
                           <packing>
