@@ -6,6 +6,14 @@ ubiquity (1.9.12) UNRELEASED; urgency=low
     - Check for proper widget when toggling mythweb. (LP: #264474)
     - Drop functionality to "use live environment mysql information".
       This is now done automatically if you've entered it previously.
+    - Update graphics driver installation to match new graphics drivers
+      in Intrepid.
+  * scripts/install.py:
+    - Correct minor indentation error.
+  * debian/rules:
+    - Drop check for python-codegen-2.0.  It dissappeared as of
+      pygtk 2.13.0-0ubuntu1.  Variables can still be overridden via the
+      enviornment at least.
 
   [ Colin Watson ]
   * Set OVERRIDE_LEAVE_CD_MOUNTED=1 to stop apt-setup (>= 1:0.37ubuntu4)
